--- a/makefile.vc
+++ b/makefile.vc
@@ -43,10 +43,10 @@ ansicon64: x64 x64\ansicon.exe x64\ANSI64.dll x64\ANSI32.dll x64\ANSI-LLW.exe
 x86:
 	mkdir x86
 
-x86\ansicon.exe: x86\ansicon.obj x86\injdll32.obj x86\ansicon.res
+x86\ansicon.exe: x86\ansicon.obj x86\proctype.obj x86\injdll32.obj x86\ansicon.res
 	$(CC) /nologo /Fe$@ $** $(LIBS)
 
-x86\ANSI32.dll: x86\ANSI.obj x86\injdll32.obj x86\ansi.res
+x86\ANSI32.dll: x86\ANSI.obj x86\proctype.obj x86\injdll32.obj x86\ansi.res
 !IF $(BITS) == 32
 	$(CC) /nologo /LD /Fe$@ $** $(LIBS)
 !ENDIF
@@ -54,10 +54,10 @@ x86\ANSI32.dll: x86\ANSI.obj x86\injdll32.obj x86\ansi.res
 x64:
 	mkdir x64
 
-x64\ansicon.exe: x64\ansicon.obj x64\injdll64.obj x64\ansicon.res
+x64\ansicon.exe: x64\ansicon.obj x64\proctype.obj x64\injdll64.obj x64\injdll32.obj x64\ansicon.res
 	$(CC) /nologo /Fe$@ $** $(LIBS) bufferoverflowu.lib
 
-x64\ANSI64.dll: x64\ANSI.obj x64\injdll64.obj x64\injdll32.obj x64\ansi.res
+x64\ANSI64.dll: x64\ANSI.obj x64\proctype.obj x64\injdll64.obj x64\injdll32.obj x64\ansi.res
 	$(CC) /nologo /LD /Fe$@ $** $(LIBS) bufferoverflowu.lib
 
 x64\ANSI32.dll: x86\ANSI32.dll
