--- a/makefile.vc
+++ b/makefile.vc
@@ -28,6 +28,9 @@ CC = cl
 CFLAGS = /nologo /W3 /Ox /GF /D_CRT_SECURE_NO_WARNINGS
 LIBS = advapi32.lib shell32.lib user32.lib
 
+X86OBJS = x86\proctype.obj x86\injdll32.obj x86\debugstr.obj
+X64OBJS = x64\proctype.obj x64\injdll64.obj x64\injdll32.obj x64\debugstr.obj
+
 {}.c{$(DIR)}.obj:
 	$(CC) /c $(CFLAGS) /Fo$@ $<
 
@@ -43,10 +46,10 @@ ansicon64: x64 x64\ansicon.exe x64\ANSI64.dll x64\ANSI32.dll x64\ANSI-LLW.exe
 x86:
 	mkdir x86
 
-x86\ansicon.exe: x86\ansicon.obj x86\proctype.obj x86\injdll32.obj x86\ansicon.res
+x86\ansicon.exe: x86\ansicon.obj $(X86OBJS) x86\ansicon.res
 	$(CC) /nologo /Fe$@ $** $(LIBS)
 
-x86\ANSI32.dll: x86\ANSI.obj x86\proctype.obj x86\injdll32.obj x86\ansi.res
+x86\ANSI32.dll: x86\ANSI.obj $(X86OBJS) x86\ansi.res
 !IF $(BITS) == 32
 	$(CC) /nologo /LD /Fe$@ $** $(LIBS)
 !ENDIF
@@ -54,10 +57,10 @@ x86\ANSI32.dll: x86\ANSI.obj x86\proctype.obj x86\injdll32.obj x86\ansi.res
 x64:
 	mkdir x64
 
-x64\ansicon.exe: x64\ansicon.obj x64\proctype.obj x64\injdll64.obj x64\injdll32.obj x64\ansicon.res
+x64\ansicon.exe: x64\ansicon.obj $(X64OBJS) x64\ansicon.res
 	$(CC) /nologo /Fe$@ $** $(LIBS) bufferoverflowu.lib
 
-x64\ANSI64.dll: x64\ANSI.obj x64\proctype.obj x64\injdll64.obj x64\injdll32.obj x64\ansi.res
+x64\ANSI64.dll: x64\ANSI.obj $(X64OBJS) x64\ansi.res
 	$(CC) /nologo /LD /Fe$@ $** $(LIBS) bufferoverflowu.lib
 
 x64\ANSI32.dll: x86\ANSI32.dll
@@ -66,5 +69,12 @@ x64\ANSI32.dll: x86\ANSI32.dll
 x64\ANSI-LLW.exe: ANSI-LLW.c
 	$(CC) $(CFLAGS) /Fe$@ /Fo$*.obj $? bufferoverflowu.lib
 
+ansicon.c:  ansicon.h
+ANSI.c:     ansicon.h
+debugstr.c: ansicon.h
+injdll32.c: ansicon.h
+injdll64.c: ansicon.h
+proctype.c: ansicon.h
+
 clean:
-	-del $(DIR)\*.obj $(DIR)\*.res
+	-del $(DIR)\*.obj $(DIR)\*.res $(DIR)\*.lib $(DIR)\*.exp
