Exclude modules from being hooked; hook only selected GUI programs.
Added environment variable ANSICON_EXC to specify modules that should not be
hooked.  This should work around the nvd3d9wrap.dll issue.  Since it helps to
know what the modules are, logging is now always available, controlled by -l
or ANSICON_LOG.  A side-effect caused debugstr.c to move to util.c.

GUI programs are once again not hooked, unless run by "ansicon" directly or in
the ANSICON_GUI environment variable.  Since not hooking still leaves ANSICON in
the environment, created ANSICON_VER as a dynamic-only variable, which can also
serve as a version check.

Due to an email requesting a reverse video option, realised I always take the
current attributes as default.	This means if you turned on reverse and ran a
program, it would take the reverse as its default.  Created ANSICON_DEF variable
to explicitly set the default attribute, using the current if it doesn't exist.
The reverse video option is done via a "negative" attribute (e.g. "-m-f0" is
reversed black on white, meaning you'll get white on black, with foreground
sequences changing the background).  (The difference from "\e[7m" is that it
won't be reset on "\e[m".)

A child program will inherit the parent's modes (but not shift); the parent will
read the child's modes on exit (but not unload).  The exception is "ansicon",
which will always start with the default modes and leave the parent unchanged.

Improved the AutoRun entry, only running "ansicon" if ANSICON_VER doesn't exist.
The "ansicon" command is always first.

Stopped -u implying -p; return the program's exit code; don't restore the
original color when just using -p; output error messages to stderr.

--- a/ansi.rc
+++ b/ansi.rc
@@ -5,6 +5,7 @@
 */
 
 #include <winver.h>
+#include "version.h"
 
 #ifdef _WIN64
 # define BITS "64"
@@ -13,8 +14,8 @@
 #endif
 
 1 VERSIONINFO
-FILEVERSION	1,4,0,0
-PRODUCTVERSION	1,4,0,0
+FILEVERSION	PVERB
+PRODUCTVERSION	PVERB
 FILEOS		VOS_NT
 FILETYPE	VFT_DLL
 {
@@ -25,12 +26,12 @@ FILETYPE	VFT_DLL
       VALUE "Comments",         "http://ansicon.adoxa.cjb.net/"
       VALUE "CompanyName",      "Jason Hood"
       VALUE "FileDescription",  "ANSI Console"
-      VALUE "FileVersion",      "1.40"
+      VALUE "FileVersion",      PVERSA
       VALUE "InternalName",     "ANSI" BITS
       VALUE "LegalCopyright",   "Freeware"
       VALUE "OriginalFilename", "ANSI" BITS ".dll"
       VALUE "ProductName",      "ANSICON"
-      VALUE "ProductVersion",   "1.40"
+      VALUE "ProductVersion",   PVERSA
     }
   }
 
