--- a/makefile.gcc
+++ b/makefile.gcc
@@ -16,12 +16,15 @@
 #
 # Tested with:
 # * MinGW/gcc 4.7.2;
-# * tdm-gcc-4.7.1-2;
-# * tdm64-gcc-4.7.1-3;
+# * tdm-gcc-4.8.1-3;
+# * tdm64-gcc-4.8.1-3;
 # * MinGW-builds x64-4.8.1-release-posix-seh-rev1.
 
 CC = gcc
 CFLAGS = -O2 -Wall
+
+# Identify ansicon.exe using "ANSI" as a version number.
+IVER = -Wl,--major-image-version,20033,--minor-image-version,18771
 
 #ARCH = 32
 #ARCH = 64
@@ -41,8 +44,8 @@ endif
 endif
 endif
 
-X86OBJS = x86/proctype.o x86/injdll32.o x86/util.o
-X64OBJS = x64/proctype.o x64/injdll64.o x64/injdll32.o x64/util.o
+X86OBJS = x86/proctype.o x86/injdll.o x86/util.o
+X64OBJS = x64/proctype.o x64/injdll.o x64/util.o
 
 # Determine the appropriate separator to run multiple commands - ";" for sh.exe
 # and "&" for CMD.EXE.  $(SHELL) is initially defined to "sh.exe" - if it
@@ -67,7 +70,7 @@ x86/%v.o: %.rc version.h
 	$(RCmsg)windres -U _WIN64 -F pe-i386 $< $@
 
 x64/%.o: %.c ansicon.h
-	$(CCmsg)$(CC) -m64 -c $(CFLAGS) $< -o $@
+	$(CCmsg)$(CC) -m64 -g -c $(CFLAGS) $< -o $@
 
 x64/%v.o: %.rc version.h
 	$(RCmsg)windres -F pe-x86-64 $< $@
@@ -89,8 +92,8 @@ ansicon64: x64 x64/ansicon.exe x64/ANSI64.dll
 x86:
 	cmd /c "mkdir x86"
 
-x86/ansicon.exe: x86/ansicon.o $(X86OBJS) x86/ansiconv.o
-	$(LDmsg)$(CC) -m32 $+ -s -o $@
+x86/ansicon.exe: x86/ansicon.o $(X86OBJS) x86/LLW.o x86/ansiconv.o
+	$(LDmsg)$(CC) -m32 $+ -s -o $@ $(IVER)
 
 x86/ANSI32.dll: x86/ANSI.o $(X86OBJS) x86/ansiv.o
 	$(LDmsg)$(CC) -m32 $+ -s -o $@ -mdll -Wl,-shared,--image-base,0xAC0000
@@ -98,14 +101,15 @@ x86/ANSI32.dll: x86/ANSI.o $(X86OBJS) x86/ansiv.o
 x64:
 	cmd /c "mkdir x64"
 
-x64/ansicon.exe: x64/ansicon.o $(X64OBJS) x64/ansiconv.o
-	$(LDmsg)$(CC) -m64 $+ -s -o $@
+x64/ansicon.exe: x64/ansicon.o $(X64OBJS) x64/LLW.o x64/ansiconv.o
+	$(LDmsg)$(CC) -m64 $+ -s -o $@ $(IVER)
 
 x64/ANSI64.dll: x64/ANSI.o $(X64OBJS) x64/ansiv.o
 	$(LDmsg)$(CC) -m64 $+ -s -o $@ -mdll -Wl,-shared,--image-base,0xAC000000
 
-x64/ANSI32.dll: x64/ANSI32.o x64/proctype32.o x86/injdll32.o x86/util.o x86/ansiv.o
-	$(LDmsg)$(CC) -m32 $+ -s -o $@ -mdll -Wl,-shared,--image-base,0xAC0000
+x64/ANSI32.dll: x64/ANSI32.o x64/proctype32.o x86/injdll.o x86/util.o x86/ansiv.o
+	$(LDmsg)$(CC) -m32 $+ -s -o $@ -mdll \
+		      -Wl,-shared,--image-base,0xAC0000,--large-address-aware
 
 x86/ansicon.o:	version.h
 x86/ANSI.o:	version.h
