--- a/makefile.vc
+++ b/makefile.vc
@@ -65,8 +65,8 @@ LIBS = advapi32.lib user32.lib $(LIBS64)
 # Identify ansicon.exe using "ANSI" as a version number.
 LINK = /link /version:20033.18771
 
-X86OBJS = x86\proctype.obj x86\injdll.obj x86\util.obj
-X64OBJS = x64\proctype.obj x64\injdll.obj x64\util.obj
+X86OBJS = x86\injdll.obj x86\proctype.obj x86\util.obj
+X64OBJS = x64\injdll.obj x64\proctype.obj x64\util.obj x64\procrva.obj
 
 !IF !DEFINED(V)
 V = 0
@@ -93,7 +93,7 @@ ansicon64: x64 x64\ansicon.exe x64\ANSI64.dll
 x86:
 	mkdir x86
 
-x86\ansicon.exe: x86\ansicon.obj $(X86OBJS) x86\LLW.obj x86\ansicon.res
+x86\ansicon.exe: x86\ansicon.obj $(X86OBJS) x86\procrva.obj x86\ansicon.res
 	$(LDmsg)$(CC) /nologo $(SHARE) /Fe$@ $** $(LIBS) $(LINK) /filealign:512
 !IF "$(_NMAKE_VER)" == "9.00.30729.01"
 	$(MTmsg)$(MT) /nologo -manifest $@.manifest -outputresource:$@;1
@@ -111,7 +111,7 @@ x86\ANSI32.dll: x86\ANSI.obj $(X86OBJS) x86\ansi.res
 x64:
 	mkdir x64
 
-x64\ansicon.exe: x64\ansicon.obj $(X64OBJS) x64\LLW.obj x64\ansicon.res
+x64\ansicon.exe: x64\ansicon.obj $(X64OBJS) x64\ansicon.res
 	$(LDmsg)$(CC) /nologo $(SHARE) /Fe$@ $** $(LIBS) $(LINK)
 
 x64\ANSI64.dll: x64\ANSI.obj $(X64OBJS) x64\ansi.res
@@ -133,7 +133,7 @@ ANSI.rc:    version.h
 util.c:     ansicon.h version.h
 injdll.c:   ansicon.h
 proctype.c: ansicon.h
-LLW.c:	    ansicon.h
+procrva.c:  ansicon.h
 
 x64\ANSI32.obj: ANSI.c
 	$(CCmsg)$(CC) /DW32ON64 /c $(CFLAGS) /Fo$@ $?
