Exclude entire programs; better hooking of dynamically-loaded libraries.
ANSICON_EXC can now be used to exclude an entire program (including children).
This is achieved by simply not specifying an extension: ANSICON_EXC=program.exe
will just ignore program.exe (its DLLs will still be hooked, as will its child-
ren), but ANSICON_EXC=program will not hook program at all (which also means
its children will not be hooked).

The various LoadLibrary hooks would only hook the DLL that was specified - any
DLLs it loaded would be missed.  That has now been rectified.  Similarly, a DLL
that is injected via CreateRemoteThread, using LoadLibraryA or LoadLibraryW as
its ThreadProc, will now be hooked.

--- a/makefile.gcc
+++ b/makefile.gcc
@@ -21,7 +21,7 @@
 # * MinGW-builds x64-4.8.1-release-posix-seh-rev1.
 
 CC = gcc
-CFLAGS = -O2 -Wall
+CFLAGS = -O2 -Wall -Wno-multichar
 
 # Identify ansicon.exe using "ANSI" as a version number.
 IVER = -Wl,--major-image-version,20033,--minor-image-version,18771
