Use the system default sound for the bell
Windows 7 uses Beep for the bell, which means if you accidentally view
a binary file, the console freezes until all the bells have finished.
Windows 10 uses PlaySound, which avoids the freeze, but prevents the
sound being played at all if the program immediately exits (in its own
host).	This uses PlaySound in its own thread, ignoring additional bells
whilst one is currently playing and waiting for it to finish before
terminating.

--- a/makefile.vc
+++ b/makefile.vc
@@ -60,7 +60,7 @@ SHARE = /MD
 MT = mt.exe
 
 CFLAGS = /nologo /W3 /O2 $(SHARE) /D_CRT_SECURE_NO_WARNINGS
-LIBS = advapi32.lib user32.lib $(LIBS64)
+LIBS = advapi32.lib user32.lib winmm.lib $(LIBS64)
 
 # Identify ansicon.exe using "ANSI" as a version number.
 LINK = /link /version:20033.18771
