--- a/makefile.vc
+++ b/makefile.vc
@@ -70,9 +70,9 @@ LIBS = advapi32.lib $(LIBS64)
 # Identify ansicon.exe using "ANSI" as a version number.
 LINK = /link /version:20033.18771
 
-X86OBJS = x86\injdll.obj x86\proctype.obj x86\util.obj
-X64OBJS = x64\injdll.obj x64\proctype.obj x64\util.obj x64\procrva.obj
-X6432OBJS = x86\injdll.obj x64\proctype32.obj x86\util.obj
+X86OBJS = x86\injdll.obj x86\procrva.obj x86\proctype.obj x86\util.obj
+X64OBJS = x64\injdll.obj x64\procrva.obj x64\proctype.obj x64\util.obj
+X6432OBJS = x86\injdll.obj x86\procrva.obj x64\proctype32.obj x86\util.obj
 
 !IF !DEFINED(V)
 V = 0
@@ -99,7 +99,7 @@ ansicon64: x64 x64\ansicon.exe x64\ANSI64.dll
 x86:
 	mkdir x86
 
-x86\ansicon.exe: x86\ansicon.obj $(X86OBJS) x86\procrva.obj x86\ansicon.res
+x86\ansicon.exe: x86\ansicon.obj $(X86OBJS) x86\ansicon.res
 	$(LDmsg)$(CC) /nologo $(SHARE) /Fe$@ $** $(LIBS) $(LINK) /filealign:512
 !IF "$(_NMAKE_VER)" == "9.00.30729.01"
 	$(MTmsg)$(MT) /nologo -manifest $@.manifest -outputresource:$@;1
