--- a/makefile.vc
+++ b/makefile.vc
@@ -22,6 +22,9 @@
 # 30 April, 2018:
 #   use undocumented rc option /s to remove its logo;
 #   use a batch rule (even if this project is too small to make a difference).
+#
+# 8 May, 2018:
+#   rc /s only removes the logo as a side-effect; use /nologo when available.
 
 #BITS = 32
 #BITS = 64
@@ -39,20 +42,26 @@ DIR = x86
 !ELSE
 !IF $(BITS) == 64
 DIR = x64
-RFLAGS = /D_WIN64
 !ELSE
 !ERROR BITS should be defined to 32 or 64.
 !ENDIF
 !ENDIF
 
-# This is required for the 2003 Platform SDK, but not for Visual Studio 2010.
-!IF "$(_NMAKE_VER)" == "7.00.8882"
-!IF $(BITS) == 64
-LIBS64 = bufferoverflowu.lib
+# Disable security checks, but VC6 & 7 don't have /GS-.
+!IF "$(_NMAKE_VER)" == "7.00.8882" && $(BITS) == 32
+NOSECCHK =
+RFLAGS =
 # The 2003 Toolkit doesn't have MSVCRT.LIB, but VC98 does.
-!ELSEIF !DEFINED(SHARE) && !DEFINED(MSVCDIR)
+!IF !DEFINED(SHARE) && !DEFINED(MSVCDIR)
 SHARE =
 !ENDIF
+!ELSE
+NOSECCHK = /GS-
+!ENDIF
+
+# 2008 (SDK v6) and earlier rc do not have /nologo.
+!IF [cmd /d /c exit /b $(_NMAKE_VER)] <= 9
+RFLAGS =
 !ENDIF
 
 # Link with MSVCRT.LIB by default.
@@ -63,9 +72,14 @@ SHARE = /MD
 # Manifest tool to embed the manifest required by 2008.
 MT = mt.exe
 
-RFLAGS = /s
-CFLAGS = /nologo /W3 /O2 $(SHARE) /D_CRT_SECURE_NO_WARNINGS
-LIBS = advapi32.lib $(LIBS64)
+!IFNDEF RFLAGS
+RFLAGS = /nologo
+!ENDIF
+!IF $(BITS) == 64
+RFLAGS = $(RFLAGS) /D_WIN64
+!ENDIF
+CFLAGS = /nologo /W3 /O2 $(NOSECCHK) /D_CRT_SECURE_NO_WARNINGS
+LIBS = kernel32.lib advapi32.lib
 
 # Identify ansicon.exe using "ANSI" as a version number.
 LINK = /link /version:20033.18771
@@ -92,14 +106,14 @@ MTmsg = @echo Embedding manifest&
 
 all: ansicon$(BITS)
 
-ansicon32: x86 x86\ansicon.exe x86\ANSI32.dll x64 x64\ANSI32.dll
+ansicon32: x86 x86\ANSI32.dll x86\ansicon.exe x64 x64\ANSI32.dll
 
-ansicon64: x64 x64\ansicon.exe x64\ANSI64.dll
+ansicon64: x64 x64\ANSI64.dll x64\ansicon.exe
 
 x86:
 	mkdir x86
 
-x86\ansicon.exe: x86\ansicon.obj $(X86OBJS) x86\ansicon.res
+x86\ansicon.exe: x86\ansicon.obj x86\ansi32.lib x86\ansicon.res
 	$(LDmsg)$(CC) /nologo $(SHARE) /Fe$@ $** $(LIBS) $(LINK) /filealign:512
 !IF "$(_NMAKE_VER)" == "9.00.30729.01"
 	$(MTmsg)$(MT) /nologo -manifest $@.manifest -outputresource:$@;1
@@ -107,30 +121,23 @@ x86\ansicon.exe: x86\ansicon.obj $(X86OBJS) x86\ansicon.res
 !ENDIF
 
 x86\ANSI32.dll: x86\ANSI.obj $(X86OBJS) x86\ansi.res
-	$(LDmsg)$(CC) /nologo $(SHARE) /LD /Fe$@ $** $(LIBS) /link \
-		      /base:0xAC0000 /filealign:512
-!IF "$(_NMAKE_VER)" == "9.00.30729.01"
-	$(MTmsg)$(MT) /nologo -manifest $@.manifest -outputresource:$@;2
-	@del $@.manifest
-!ENDIF
+	$(LDmsg)$(CC) /nologo /LD /Fe$@ $** $(LIBS) /link \
+		      /base:0xAC0000 /entry:DllMain /filealign:512
 
 x64:
 	mkdir x64
 
-x64\ansicon.exe: x64\ansicon.obj $(X64OBJS) x64\ansicon.res
+x64\ansicon.exe: x64\ansicon.obj x64\ansi64.lib x64\ansicon.res
 	$(LDmsg)$(CC) /nologo $(SHARE) /Fe$@ $** $(LIBS) $(LINK)
 
 x64\ANSI64.dll: x64\ANSI.obj $(X64OBJS) x64\ansi.res
-	$(LDmsg)$(CC) /nologo $(SHARE) /LD /Fe$@ $** $(LIBS) /link \
-		      /base:0xAC000000
+	$(LDmsg)$(CC) /nologo /LD /Fe$@ $** $(LIBS) /link \
+		      /base:0xAC000000 /entry:DllMain
 
 x64\ANSI32.dll: x64\ANSI32.obj $(X6432OBJS) x86\ansi.res
-	$(LDmsg)$(CC) /nologo $(SHARE) /LD /Fe$@ $** $(LIBS) /link \
-		      /base:0xAC0000 /filealign:512 /largeaddressaware
-!IF "$(_NMAKE_VER)" == "9.00.30729.01"
-	$(MTmsg)$(MT) /nologo -manifest $@.manifest -outputresource:$@;2
-	@del $@.manifest
-!ENDIF
+	$(LDmsg)$(CC) /nologo /LD /Fe$@ $** $(LIBS) /link \
+		      /base:0xAC0000 /entry:DllMain /filealign:512 \
+		      /largeaddressaware
 
 ansicon.c:  ansicon.h version.h
 ansicon.rc: version.h
@@ -140,6 +147,9 @@ util.c:     ansicon.h version.h
 injdll.c:   ansicon.h
 proctype.c: ansicon.h
 procrva.c:  ansicon.h
+
+$(DIR)\ansicon.obj:
+	$(CCmsg)$(CC) /c $(CFLAGS) $(SHARE) /Fo$@ $?
 
 x64\ANSI32.obj: ANSI.c
 	$(CCmsg)$(CC) /DW32ON64 /c $(CFLAGS) /Fo$@ $?
